--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
                         <li><a href="https://mavefers.github.io/html-css-es/13-image-optimization.html" target="_blank" rel="noopener noreferrer">image-optimization</a></li>
                         <li><a href="https://mavefers.github.io/html-css-es/14-img-tag.html" target="_blank" rel="noopener noreferrer">img-tag</a></li>
                         <li><a href="https://mavefers.github.io/html-css-es/15-video-tag.html" target="_blank" rel="noopener noreferrer">video-tag</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/" target="_blank" rel="noopener noreferrer"></a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/" target="_blank" rel="noopener noreferrer"></a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/" target="_blank" rel="noopener noreferrer"></a></li>
+                        <li><a href="https://mavefers.github.io/html-css-es/16-form-and-imput-tag.html" target="_blank" rel="noopener noreferrer">form-and-imput-tag</a></li>
+                        <li><a href="https://mavefers.github.io/html-css-es/17-calendar.html" target="_blank" rel="noopener noreferrer">calendar</a></li>
+                        <li><a href="https://mavefers.github.io/html-css-es/18-autocomplete-and-require.html" target="_blank" rel="noopener noreferrer">autocomplete-and-require</a></li>
+                        <li><a href="https://mavefers.github.io/html-css-es/19-select.html" target="_blank" rel="noopener noreferrer">select</a></li>
                     </ol>
                 </div>
                 <br/>
@@ -70,6 +71,12 @@
                     <ul>
                         <li>Atajos de Visual Studio Code (VSC) >>> <a href="https://tecnoloco.istocks.club/metodos-abreviados-de-teclado-esenciales-para-visual-studio-code/2020-05-30/" target="_blank">link</a></li>
                     </ul>
+                    <dl>
+                        <dt>Para realizar comentarios selectivos</dt>
+                        <dd><b>Shift</b>+<b>Alt</b>+<b>A</b></dd><br/>
+                        <dt>Para realizar comentarios en linea</dt>
+                        <dd><b>Ctrl</b> + <b>/</b></dd><br/>
+                    </dl>
                 </div>
             </article>
         </section>
