docs: added a section in images

--- a/21-intro-css.html
+++ b/21-intro-css.html
@@ -51,6 +51,12 @@
                                 <img src="https://static.platzi.com/media/user_upload/photo_2020-12-18_17-20-28-fd07a679-d052-460a-a43c-1cd3e5b02e5e.jpg" alt="" width="800">
                                 <img src="https://res.cloudinary.com/dqhme1rod/image/upload/v1639668190/machine/sbckwi9oharr6bya3oys.png" alt="" width="800">
                             </figure>
+                        </dd><br/>
+                        <li>Algunas funciones que se fueron implementando en las versiones de CSS:</li>
+                        <dd>
+                            <figure>
+                                <img src="./images/CSS3-modulos.jpg" alt="">
+                            </figure>
                         </dd>
                     </ul>
                 </div>
