--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div>
                     <h2>Index</h2>
                     <ol>
-                        <li><a href="https://mavefers.github.io/html-css-es/1-intro.html" target="_blank">intro</a></li>
+                        <li><a href="https://mavefers.github.io/html-css-es/1-intro-html.html" target="_blank">intro</a></li>
                         <li><a href="https://mavefers.github.io/html-css-es/2-frontend.html" target="_blank">frontend</a></li>
                         <li><a href="https://mavefers.github.io/html-css-es/3-backend-devops-deploy.html" target="_blank" rel="noopener noreferrer">backend-devops-deploy</a></li>
                         <li><a href="https://mavefers.github.io/html-css-es/4-fullstack.html" target="_blank" rel="noopener noreferrer">fullstack</a></li>
@@ -63,6 +63,10 @@
                         <li><a href="https://mavefers.github.io/html-css-es/17-calendar.html" target="_blank" rel="noopener noreferrer">calendar</a></li>
                         <li><a href="https://mavefers.github.io/html-css-es/18-autocomplete-and-require.html" target="_blank" rel="noopener noreferrer">autocomplete-and-require</a></li>
                         <li><a href="https://mavefers.github.io/html-css-es/19-select.html" target="_blank" rel="noopener noreferrer">select</a></li>
+                        <li><a href="https://mavefers.github.io/html-css-es/20-input-type-submit-vs-button-tag.html" target="_blank" rel="noopener noreferrer">input-type-submit-vs-button-tag</a></li>
+                        <li><a href="https://mavefers.github.io/html-css-es/21-intro-css.html" target="_blank" rel="noopener noreferrer">intro-css</a></li>
+                        <li><a href="https://mavefers.github.io/html-css-es/22-uso-css-por-etiqueta-selector-class-id.html" target="_blank" rel="noopener noreferrer">uso-css-por-etiqueta-selector-class-id</a></li>
+                        <li><a href="https://mavefers.github.io/html-css-es/23-pseudo-clases-y-pseudo-elementos.html" target="_blank" rel="noopener noreferrer">pseudo-clases-y-pseudo-elementos</a></li>
                     </ol>
                 </div>
                 <br/>
