docs: CSS games

--- a/21-intro-css.html
+++ b/21-intro-css.html
@@ -25,6 +25,9 @@
                         </dd><br/>
                         <li>CSS Tutorial</li>
                         <dd><a href="https://www.w3schools.com/css/default.asp">https://www.w3schools.com/css/default.asp</a></dd><br/>
+                        <li>CSS - Juegos para aprender</li>
+                        <dd>Flexbox: <a href="https://flexboxfroggy.com/#es">https://flexboxfroggy.com/#es</a></dd><br/>
+                        <dd>CSS Grid: <a href="https://cssgridgarden.com/#es">https://cssgridgarden.com/#es</a></dd><br/>
                         <li>CSS Animado</li>
                         <dd><a href="https://animate.style/">https://animate.style/</a></dd><br/>
                         <li>CSS - IMPORTANTE</li>
