docs: added a section

--- a/22-uso-css-por-etiqueta-selector-class-id.html
+++ b/22-uso-css-por-etiqueta-selector-class-id.html
@@ -74,6 +74,12 @@
                     <p>El atributo <i>class=" "</i> se usa cuando se quiere aplicar un estilo en un grupo selecto de elementos, por ejemplo, cuando hay 5 párrafos pero a solo 3 les quiero aplicar el estilo; para esto, se tiene que agregar el atributo <i>class=" "</i>, con el mismo valor, <i>class="textos"</i> a cada uno de los elementos, los cuales se quiere modificar.</p>
                     <p>El atributo <i>id=" "</i> se  usa cuando se quiere aplicar estilos solo a un único elemento, solo a uno. No se debe colocar el mismo id a más de un elemento.</p>
                 </div>
+            </section><br/>
+            <section>
+                <div>
+                    <h4>Colores en los bordes de CSS</h4>
+                    <p>La manera en la que se implementan los colores en los bordes en CSS, son: <br/> Cuando se declara un solo color en una sola linea de código <i>border-color: color1;</i>, el color afecta a todos los lados.<br/>Cuando se implementan dos colores, <i>border-color: color1 color2;</i>, <b>no hay necesidad de separar con valores con algún signo;</b> en este caso, el primero aplica al TOP y al BOTTOM, y el segundo aplica a los lados, izquierdo y derecho. Cuando se declaran tres colores, el primero aplica en el TOP, el segundo aplica en los lados, izquierdo y derecho, y el segundo aplica al BOTTOM.</p>
+                </div>
             </section>
         </article>
     </main>
