docs: added an update

--- a/9-challenge-shopping-list.html
+++ b/9-challenge-shopping-list.html
@@ -26,8 +26,10 @@
                                 <a href="https://buenazo.pe/recetas/cocteles-y-bebidasmilkshake-fresa-receta-paso-paso-852">Fresa</a>
                                 <div>
                                     <figure class="figure-imagen-fresa">
-                                        <img class="imagen_fresa" src="./images/milkshake_fresa.jpg" alt="Milkshake de fresa">
-                                        <figcaption>Imagen de un milkshake de fresa.</figcaption>
+                                        <img class="imagen_fresa" src="./images/fresa.jpg" alt="Una fresa.">
+                                        <figcaption>La fresa perfecta.</figcaption>
+                                        <img class="imagen_milkshake" src="./images/milkshake_fresa.jpg" alt="Milkshake de fresa">
+                                        <figcaption>El milkshake perfecto.</figcaption>
                                     </figure>
                                 </div>
                                 <div>
