docs: updated li-frutas

--- a/9-challenge-shopping-list.html
+++ b/9-challenge-shopping-list.html
@@ -21,15 +21,28 @@
                 <ul>
                     <li type="disc">Frutas
                         <ol>
-                            <li><a href="https://www.comedera.com/receta-para-hacer-un-pie-de-manzana/" target="_blank">Manzana</a></li>
-                            <li>
-                                <a href="https://buenazo.pe/recetas/cocteles-y-bebidasmilkshake-fresa-receta-paso-paso-852">Fresa</a>
+                            <li class="li-frutas">
+                                <a href="https://www.comedera.com/receta-para-hacer-un-pie-de-manzana/" target="_blank">Manzana</a>
+                                <div>
+                                    <figure class="figure-imagen-manzana">
+                                        <img class="imagen-manzana" src="./images/manzana.jpg" alt="Manzanas" />
+                                        <figcaption>Manzanas</figcaption>
+                                        <img class="imagen-pie" src="./images/pie-de-manzana.jpg" alt="Pie de manzana" />
+                                        <figcaption>Pie de manzanas</figcaption>
+                                    </figure>
+                                </div>
+                                <div>
+                                    <iframe width="280" height="158" src="https://www.youtube.com/embed/ctHQhNAcLa8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+                            </li>
+                            <li class="li-frutas">
+                                <a href="https://buenazo.pe/recetas/cocteles-y-bebidasmilkshake-fresa-receta-paso-paso-852" target="_blank">Fresa</a>
                                 <div>
                                     <figure class="figure-imagen-fresa">
-                                        <img class="imagen_fresa" src="./images/fresa.jpg" alt="Una fresa.">
-                                        <figcaption>La fresa perfecta.</figcaption>
-                                        <img class="imagen_milkshake" src="./images/milkshake_fresa.jpg" alt="Milkshake de fresa">
-                                        <figcaption>El milkshake perfecto.</figcaption>
+                                        <img class="imagen-fresa" src="./images/fresa.jpg" alt="Una fresa.">
+                                        <figcaption class="fc-fresa">La fresa perfecta.</figcaption>
+                                        <img class="imagen-milkshake" src="./images/milkshake_fresa.jpg" alt="Milkshake de fresa">
+                                        <figcaption class="fc-fresa">El milkshake perfecto.</figcaption>
                                     </figure>
                                 </div>
                                 <div>
