--- a/22-uso-css-por-etiqueta-selector-class-id.html
+++ b/22-uso-css-por-etiqueta-selector-class-id.html
@@ -82,6 +82,18 @@
                 </div>
             </section>
         </article>
+        <article>
+            <section>
+                <div>
+                    <h2>Datos que agregar al construir con CSS</h2>
+                    <p>Antes se usaba '<i>width</i>' para definir el ancho, y '<i>height</i>' para definir el alto; en la actualidad, estas propiedades son remplazadas por '<i>inline-size</i>' y '<i>block-size</i>'.</p>
+                    <figure>
+                        <img id="img-models" src="/images/models-css.png" alt="">
+                        <figcaption>Fuente: <a href="https://lenguajecss.com/css/modelo-de-cajas/propiedades-logicas-css/">lenguajecss.com</a></figcaption>
+                    </figure>
+                </div>
+            </section>
+        </article>
     </main>
     <footer></footer>
 </body>
