--- a/22-uso-css-por-etiqueta-selector-class-id.html
+++ b/22-uso-css-por-etiqueta-selector-class-id.html
@@ -28,27 +28,31 @@
                                 <span><b>< p style="color: royalblue;" ></b>Soy un texto<b>< / p></b></span> - <span style="color: royalblue">Soy un texto</span><br/>
                                 <span><b>< p style="font-size: 30px;" ></b>Soy un texto<b>< / p></b></span> - <span style="font-size: 30px">Soy un texto</span><br/>
                                 <span><b>< p style="font-size: 30px; color: royalblue" ></b>Soy un texto<b>< / p></b></span> - <span style="font-size: 30px; color: royalblue">Soy un texto</span>
+                                <span>
+                                </span>
                             </p>
-                            Evitar esta práctica, porque por error podremos reescribir todos los estilos almacenados en nuestro archivo CSS que está dentro de la etiqueta <i>< link /></i>.
+                            <p id="parrafo-li-3">
+                                Evitar esta práctica, porque por error podremos reescribir todos los estilos almacenados en nuestro archivo CSS que está dentro de la etiqueta <i>< link /></i>.
+                            </p>
                         </dd>
                     </ol>
                 </div>
                 <div>
-                    <h4>Etiqueta <i>< link /></i></h4>
+                    <h4 id="h4-title-link-tag" class="h4-title">Etiqueta <i>< link /></i></h4>
                     <dd>Nos ayuda a referenciar donde está el archivo de CSS que tenemos que jalar.</dd>
                     <p>Como buena práctica, es mejor dividir los archivos en directorios independientes, por un lado el .html y por el otro, el .css</p>
                 </div>
                 <div>
-                    <h4>Agregar estilos dentro de la etiqueta <i>< style > < / style ></i></h4>
+                    <h4 id="h4-title-style-tag" class="h4-title">Agregar estilos dentro de la etiqueta <i>< style > < / style ></i></h4>
                     <dd>
                         Esta etiqueta se coloca, únicamente, dentro del apartado del <i>< head ></i>, en la parte superior del código. En esta manera de implementar CSS a nuestro proyecto, tenemos que indicarle al CSS el elemento que queremos modificar.<br/>La sintaxis es generando "brackets" <b>{...}</b> que funcionarían como parámetro de cada elemento que queramos modificar, agregando por dentro, los estilos que queremos implementar en cada elemento. Por dentro, nosotros podremos agregar todos los estilos que queramos.
                         <p>Ejemplo:<br/><span>p {<br/>color: red;<br/>font-size: 30px;<br/>}</span></p>
                         Si no precisamos la etiqueta en la que queremos aplicar el estilo, usando atributos como <b>id=""</b> o <b>class=""</b>, el estilo afectará a todas las etiquetas que coincidan con lo que hemos declarado. Esto quiere decir que, si ponemos estilo a una etiqueta <i>< p ></i>, afectará a todas las etiquetas de párrafo que hayan en el documento, a menos que la etiqueta tenga un identificador/id, <i>< p id="parrafo1" ></i>, o una clase/class, <i>< p class="parrafo-principal" ></i>.
                     </dd>
                 </div>
-            </section><br/>
+            </section>
             <section>
-                <h4>Selectores: etiqueta - .class - #id</h4>
+                <h4 id="h4-title-selectors" class="h4-title">Selectores: etiqueta - .class - #id</h4>
                 <div>
                     <p>Tenemos 3 maneras de mandar a llamar ciertas <b>propiedades</b> para implementar los estilos</p>
                     <ol>
@@ -66,7 +70,7 @@
                         <dd>
                             Este caso es similar, ya que la etiqueta a la que queremos implementar el estilo <b>tiene que tener un identificador</b> ( <i>id=" "</i> ) como atributo.<br/>Para poder mandar a llamar a ese identificador que se ha creado como atributo, dentro de la etiqueta seleccionada, se tiene que iniciar escribiendo el signo numeral ( <b>#</b> ), y el nombre del identificador (id=" "), o sea <b>el valor del identificador que hemos designado</b> (id="valor").<br/><span>El <i>valor</i> del atributo <i>id=" "</i> puede ser usado solo una vez por página, esto quiere decir que el <i>valor</i> tiene que ser único por página, o sea, que solo puede haber un <i>id="texto1"</i> por documento.</span>
                             <p><b>#</b>nombre_id <b>{</b><br/>atributo: valor;<br/>atributo: v4l0rpx;<br/><b>}</b><br/><span id="texto1">Selector id - (id=" ")</span></p>
-                        </dd><br/>
+                        </dd>
                     </ol>
                 </div>
                 <div>
@@ -74,10 +78,10 @@
                     <p>El atributo <i>class=" "</i> se usa cuando se quiere aplicar un estilo en un grupo selecto de elementos, por ejemplo, cuando hay 5 párrafos pero a solo 3 les quiero aplicar el estilo; para esto, se tiene que agregar el atributo <i>class=" "</i>, con el mismo valor, <i>class="textos"</i> a cada uno de los elementos, los cuales se quiere modificar.</p>
                     <p>El atributo <i>id=" "</i> se  usa cuando se quiere aplicar estilos solo a un único elemento, solo a uno. No se debe colocar el mismo id a más de un elemento.</p>
                 </div>
-            </section><br/>
+            </section>
             <section>
                 <div>
-                    <h4>Colores en los bordes de CSS</h4>
+                    <h4 id="h4-title-colors-css" class="h4-title">Colores en los bordes de CSS</h4>
                     <p>La manera en la que se implementan los colores en los bordes en CSS, son: <br/> Cuando se declara un solo color en una sola linea de código <i>border-color: color1</i>, el color afecta a todos los lados.<br/>Cuando se implementan dos colores, <i>border-color: color1 color2;</i>, <b>no hay necesidad de separar con valores con algún signo;</b> en este caso, el primero aplica al TOP y al BOTTOM, y el segundo aplica a los lados, izquierdo y derecho. Cuando se declaran tres colores, el primero aplica en el TOP, el segundo aplica en los lados, izquierdo y derecho, y el segundo aplica al BOTTOM.</p>
                 </div>
             </section>
@@ -87,6 +91,7 @@
                 <div>
                     <h2 id="title-dates">Datos que agregar al construir con CSS</h2>
                     <p>Antes se usaba '<i>width</i>' para definir el ancho, y '<i>height</i>' para definir el alto; en la actualidad, estas propiedades son remplazadas por '<i>inline-size</i>' y '<i>block-size</i>'.</p>
+                    <p>El <i>margin</i> está relacinado directamente con el <i>content</i>.</p>
                     <figure id="figure-models">
                         <img id="img-models" src="./images/models-css.png" alt="" />
                         <figcaption id="fig-models">Fuente: <a href="https://lenguajecss.com/css/modelo-de-cajas/propiedades-logicas-css/" target="_blank">lenguajecss.com</a></figcaption>
